--- a/Part1/index.html
+++ b/Part1/index.html
@@ -33,9 +33,12 @@
     <span>Player </span>
     <span id="player">X</span>
     <span>'s turn</span>
+    <button id='btn' oneclick='resetGame()'>reset</button>
     <script src="./index.js"></script>
-  
+    
+    
       </main>
+  
 </body>
 
 </html>
