--- a/Part1/index.html
+++ b/Part1/index.html
@@ -33,7 +33,7 @@
     <span>Player </span>
     <span id="player">X</span>
     <span>'s turn</span>
-    <button id='btn' oneclick='resetGame()'>reset</button>
+    <button id='btn' onclick='resetGame()'>reset</button>
     <script src="./index.js"></script>
     
     
